# Owl-Watch

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  auth.bazelrc  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements_dev.txt  requirements_prod.txt  setup.py  tsconfig.json  zensical.toml
.devcontainer/: devcontainer.json
.github/instructions/: copilot_instructions.instructions.md
.github/workflows/: README.md  cdk-build.yml  cicd-pipeline.yml  dev-environment.yml  docs.yml  execution-build.yml  full-build.yml  install-hatch.yml  integration-build.yml  security-scanning.yml  setup-homebrew.yml
app/: owlwatch.py
app/plugins/: Data-Processing.ipynb  Data-Processing.py  data_processing.py
app/static/data/: global_cases.pkl  global_deaths.pkl  global_recovered.pkl
cdk/: BUILD.bazel  README.md  cdk.json  package-lock.json  package.json
cdk/lib/: app.ts
cdk/lib/stacks/: dataStack.ts  glueStack.ts  monitoringStack.ts
cdk/lib/utils/: createAsset.ts  types.ts
config/: owlwatch.conf  owlwatch.wsgi
docs/: index.md
docs/api/core/: config_manager.md  job_factory.md  job_runner.md  local_runner.md  main.md
docs/api/jobs/: analytics.md  communication.md  data.md
docs/api/models/: base.md  base_job.md  data_quality.md  exceptions.md  job_metadata.md
docs/api/schemas/: communication_schema.md
docs/api/utils/: logger.md  validation.md
docs/architecture/: index.md
execution/: README.md  __init__.py  etl_class_factory.py  local_etl_runner.py
execution/core/: config_manager.py  job_factory.py  job_runner.py  local_runner.py  main.py
execution/docs/source/: conf.py  index.rst
execution/etl/: README.md  main_etl_running.py  sentiment_analysis.py
execution/etl/jobs/: README.md  __init__.py  data_cleaning.py  email_communication.py  sentiment_analysis.py  slack_communication.py
execution/jobs/: __init__.py
execution/jobs/analytics/: bedrock_ai.py  sentiment.py
execution/jobs/communication/: email.py  slack.py  whatsapp.py
execution/jobs/data/: cleaning.py  transformation.py
execution/ml/: README.md
execution/models/: base.py  base_job.py  data_quality.py  job_metadata.py
execution/models/exceptions/: EXCEPTION_IMPLEMENTATION_SUMMARY.md  EXCEPTION_USAGE.md  __init__.py
execution/schemas/: __init__.py  communication_schema.py
execution/src/etl/: data_cleaning.py  sentiment_analysis.py
execution/src/ml/: bedrock_processor.py
execution/utils/: README.md  __init__.py  base_glue_job.py  communication_schema.py  logger.py  validation.py
integration_tests/: README.md  __init__.py  conftest.py  pytest.ini  test_integration_runner.py
integration_tests/.github/workflows/: integration-tests.yml
integration_tests/cdk/: app.ts  cdk.json  package.json
integration_tests/cdk/lambda/test-runner/: index.py
integration_tests/cdk/lambda/test-runner/tests/: csv_transform_test.py
integration_tests/cdk/lib/: integration-test-stack.ts
integration_tests/fixtures/: __init__.py
integration_tests/fixtures/configs/: test_config.json
integration_tests/fixtures/data/: README.md  sample_input.csv  sample_raw_data.json
integration_tests/fixtures/expected/: README.md  expected_cleaned_data.json  expected_output_schema.json
integration_tests/fixtures/sample_data/: customer_feedback.json
integration_tests/infrastructure/: README.md
integration_tests/integration/: test_aws_integration.py  test_data_pipeline.py  test_glue_jobs.py  test_lambda_handler.py
integration_tests/scripts/: deploy-infrastructure.sh  destroy-infrastructure.sh  run-integration-tests.sh  setup.sh
integration_tests/test_suites/: test_etl_pipeline.py
site/: 404.html  index.html  objects.inv  search.json  sitemap.xml
site/api/core/config_manager/: index.html
site/api/core/job_factory/: index.html
site/api/core/job_runner/: index.html
site/api/core/local_runner/: index.html
site/api/core/main/: index.html
site/api/jobs/analytics/: index.html
site/api/jobs/communication/: index.html
site/api/jobs/data/: index.html
site/api/models/base/: index.html
site/api/models/base_job/: index.html
site/api/models/data_quality/: index.html
site/api/models/exceptions/: index.html
site/api/models/job_metadata/: index.html
site/api/schemas/communication_schema/: index.html
site/api/utils/logger/: index.html
site/api/utils/validation/: index.html
site/architecture/: index.html
src/: BUILD.bazel  README.md
tests/: BUILD.bazel  README.md  __init__.py  conftest.py
tests/cdk/: filler.test.ts
tests/execution/: conftest.py  test_utils.py
tests/execution/core/: test_config_manager.py  test_job_factory.py  test_job_runner.py  test_local_runner.py  test_main.py
tests/execution/jobs/analytics/: test_bedrock_ai.py  test_sentiment.py
tests/execution/jobs/communication/: test_email.py
tests/execution/jobs/data/: test_cleaning.py  test_transformation.py
tests/execution/models/: test_base_job.py  test_data_quality.py  test_job_metadata.py
tests/execution/schemas/: test_communication_schema.py
tests/execution/utils/: test_init.py  test_logger.py  test_validation.py
tests/fixtures/sample_data/: BUILD.bazel
tests/integration/: test_aws_integration.py  test_glue_jobs.py  test_lambda_handler.py
tests/integration_tests/: test_sample.py
tools/linting/: BUILD.bazel  fixers.bzl  format.py  linters.bzl  runner.py  ts_runner.py
