module(
    name = "owl_watch",
    version = "0.1.0",
)

bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_nodejs", version = "6.5.0")
bazel_dep(name = "rules_python", version = "1.5.4")
bazel_dep(name = "rules_uv", version = "0.88.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

# Production requirements
pip_prod = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip_prod.parse(
    hub_name = "pip_prod",
    python_version = "3.11",
    requirements_lock = "//:requirements_prod.txt",
)
use_repo(pip_prod, "pip_prod")

# Development requirements (superset of prod)
pip_dev = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip_dev.parse(
    hub_name = "pip_dev",
    python_version = "3.11",
    requirements_lock = "//:requirements_dev.txt",
)
use_repo(pip_dev, "pip_dev")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "18.17.0")
