[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owl-watch"
version = "0.1.0"
description = "Data engineering pipeline with AWS Glue and ML processing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "The Winter Shadow"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "pyspark",
    "pandas",
    "numpy",
    "awsglue-dev",
]

[project.optional-dependencies]
dev = [
    "boto3",
    "pyspark",
    "pandas",
    "numpy",
    "awsglue-dev",
    "boto3-stubs",
    "isort",
    "black",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "boto3-stubs",
    "types-boto3",
    "moto",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]



[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]

python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=owl_watch --cov-report=html --cov-report=term-missing"