
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build]
directory = "execution/dist"
[tool.hatch.envs.default.scripts]
pre-build = [
    "isort execution/src execution/tests",
    "black --check execution/src execution/tests",
    "mypy execution/src"
]

# Sphinx documentation build script
docs = "sphinx-build -b html execution/docs/source execution/docs/build"
[tool.hatch.envs.default]
dependencies = [
    "boto3",
    "pyspark",
    "pandas",
    "numpy",
    "awsglue-dev",
]

[tool.hatch.envs.dev]
dependencies = [
    "sphinx",
    "boto3",
    "pyspark",
    "pandas",
    "numpy",
    "awsglue-dev",
    "boto3-stubs",
    "isort",
    "black",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-boto3",
    "moto",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "moto",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]
command = "pytest"

[project]
name = "owl-watch"
version = "0.1.0"
description = "Data engineering pipeline with AWS Glue and ML processing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "The Winter Shadow"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["execution"]

[tool.setuptools.package-dir]
"" = "execution"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["execution/src"]