[tool.hatch.envs.dev.scripts]
isort = "python -m isort {args}"
black = "python -m black {args}"
flake8 = "python -m flake8 {args}"
mypy = "python -m mypy --exclude 'execution/docs' {args}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
directory = "execution/dist"

[tool.hatch.envs.default.scripts]
pre-build = [
    "isort execution/etl execution/ml tests/execution integration_tests tests/integration_tests --check --diff",
    "black --check execution/etl execution/ml tests/execution integration_tests tests/integration_tests",
    "mypy execution/etl execution/ml tests/execution integration_tests tests/integration_tests",
    "flake8 execution/etl execution/ml tests/execution integration_tests tests/integration_tests",
    "bandit -r execution/",
    "bandit -r integration_tests/",
]

format = [
    "isort execution/etl execution/ml tests/execution integration_tests tests/integration_tests",
    "black execution/etl execution/ml tests/execution integration_tests tests/integration_tests"
]

# Sphinx documentation build script
docs = "sphinx-build -b html execution/docs/source execution/docs/build"

[tool.hatch.envs.default]
dependencies = [
    "boto3",
    "pyspark",
    "pandas",
    "numpy",
]

[tool.hatch.envs.dev]
dependencies = [
    "sphinx",
    "boto3",
    "pyspark",
    "pandas",
    "numpy",
    "boto3-stubs",
    "isort",
    "black",
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "flake8-pyproject",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-boto3",
    "moto",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov",
    "bandit",
    "aws-glue-libs @ git+https://github.com/awslabs/aws-glue-libs.git",
    "pytest",
    "pytest-cov",
    "moto[glue]==4.1.14",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "boto3",
]


[project]
name = "owl-watch"
version = "0.1.0"
description = "Data engineering pipeline with AWS Glue and ML processing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "The Winter Shadow"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.packages.find]
where = ["execution"]

[tool.setuptools.package-dir]
"" = "execution"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = "execution/docs/.*|docs/.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/execution"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["execution/etl", "execution/ml"]