

# CDK deployment files

filegroup(
    name = "package_files",
    srcs = ["package.json", "package-lock.json"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_ts_files",
    srcs = glob(["**/*.ts"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cdk_all",
    srcs = [
        ":package_files",
        ":all_ts_files",
        # add other targets as needed
    ],
    visibility = ["//visibility:public"],
)
