load("@pip_dev//:requirements.bzl", dev_requirement = "requirement")
load("@pip_prod//:requirements.bzl", prod_requirement = "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "runner",
    srcs = ["runner.py"],
    main = "runner.py",
    visibility = ["//visibility:public"],
    deps = [
        prod_requirement("boto3"),
    ],
)

# TypeScript runner
py_binary(
    name = "ts_runner",
    srcs = ["ts_runner.py"],
    main = "ts_runner.py",
    visibility = ["//visibility:public"],
)

# Format script
py_binary(
    name = "format",
    srcs = ["format.py"],
    data = [
        "//:pyproject.toml",
        "//cdk:all_ts_files",
        "//src:all_py_files",
    ],
    main = "format.py",
    deps = [
        ":runner",
        ":ts_runner",
        dev_requirement("black"),
        dev_requirement("isort"),
    ],
)
